--- a/MultiScaleResponseCurvesCRB.Rmd
+++ b/MultiScaleResponseCurvesCRB.Rmd
@@ -4,7 +4,7 @@ output: html_document
 ---
 
 ```{r}
-### Response curves
+### response curves
 response_curves <- list()
 
 for (var in final_best_vars) {
